a few more tweaks

--- a/data types.ipynb
+++ b/data types.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +564,8 @@
       "isalpha: True\n",
       "upper: HELLO\n",
       "swapcase: hElLo\n",
-      "title: Guido Van Rossum\n"
+      "title: Guido Van Rossum\n",
+      "split: ['The', 'quick', 'brown', 'fox']\n"
      ]
     }
    ],
@@ -579,7 +580,9 @@
     "word_two = \"HeLlO\"\n",
     "print \"swapcase:\", word_two.swapcase() # for every letter in the string, swap between upper and lower case\n",
     "name = \"guido van rossum\"\n",
-    "print \"title:\", name.title() # Assumes the string is a name and will change the first letter of each word to uppercase"
+    "print \"title:\", name.title() # Assumes the string is a name and will change the first letter of each word to uppercase\n",
+    "sentence = \"The quick brown fox\"\n",
+    "print \"split:\", sentence.split() # Splits the string into individual words grouped into a list."
    ]
   },
   {
